--- a/assets/css/tablestyle.css
+++ b/assets/css/tablestyle.css
@@ -1,12 +1,34 @@
-
-
-.container-background{
-    background-color: tomato;
-    height: 80vh;
+body {
+    margin: 0;
 }
-.table-body{
+
+#container {
+    background-color: tomato;
+    max-width: 960px;
+    height: auto;
+    margin-top: 15vh;
+    padding: 1rem;
+
+
+}
+
+.table-body {
     border: 1px solid #11ff22;
     padding: 10px;
     margin: 10px;
 
+}
+
+.btn {
+    padding: 0.1rem;
+
+}
+
+.btn:hover {
+    background-color: #99e4f7;
+    transform: scale(1.06);
+}
+
+.btn:focus {
+    border: none;
 }
